fixing pill tag action button overflow issue

--- a/assets/styles/pills.css
+++ b/assets/styles/pills.css
@@ -10,6 +10,10 @@
     padding: 20px;
 }
 
+.pills-element .tag-elem {
+    padding: 10px 30px 10px 12px;
+}
+
 input.pills-element__input {
     border: none;
     font-size: 10pt;
@@ -30,6 +34,8 @@ input.pills-element__input {
     font-size: 0px;
     margin-left: 5px;
     padding-left: 5px;
+    position: absolute;
+    right: 10px;
 }
 
 .pills-element__pill__save::after {
